AnalyticsController.java added.